fwknop-2.6.6 (02//2015):
    - [server] Bug fix when compiled with --enable-udp-server to not include
      pcap.h, which is likely not installed whenever libpcap is also not
      installed. This bug was reported by Alexander Kozhevnikov.
    - Set AFL_HARDEN=1 to AFL fuzzing wrapper scripts. This enables simple
      memory bug detection in AFL at the cost of a small performance hit.

fwknop-2.6.5 (12/16/2014):
    - [server] (Grant Pannell) Added a new access.conf variable "DESTINATION"
      to define the destination address for which an SPA packet will be
      accepted. The string "ANY" is also accepted if a valid SPA packet should
      be honored to any destination IP. Similarly to the "SOURCE" variable,
      networks should be specified in CIDR notation (e.g. "192.168.10.0/24"),
      and individual IP addresses can be specified as well. Also, multiple IP's
      and/or networks can be defined as a comma separated list (e.g.
      "192.168.10.0/24,10.1.1.123").
    - [server] Bug fix to ensure that proper bounds are enforced when
      importing digest cache files from previous fwknopd executions. This bug
      was discovered through fuzzing with American Fuzzy Lop (AFL) as driven
      by the test/afl/fuzzing-wrappers/server-digest-cache.sh wrapper.
      Previous to this fix, fwknopd could be made to crash through a malicious
      digest cache file (normally in /var/run/fwknop/digest.cache) upon
      initial import. This crash can only be triggered by a local user on the
      system where fwknopd is deployed and who has write permissions to the
      digest.cache file - usually only root has these permissions.

fwknop-2.6.4 (11/16/2014):
    - [server] Added a UDP server mode so that SPA packets can be acquired via
      UDP directly without having to use libpcap. This is an optional feature
      since it opens a UDP port (and therefore requires the local firewall be
      opened for communications to this port), but fwknopd is careful to never