@@ -4,10 +4,10 @@
 
 cd ..
 
-lcov --rc lcov_branch_coverage=1 --no-checksum --capture --directory . --output-file $LCOV_INFO
-lcov --rc lcov_branch_coverage=1 --no-checksum -a $LCOV_BASE -a $LCOV_INFO --output-file $LCOV_INFO_FINAL
-lcov --rc lcov_branch_coverage=1 --no-checksum -r $LCOV_INFO /usr/include/\* --output-file $LCOV_INFO_FINAL
-genhtml --branch-coverage --output-directory $LCOV_RESULTS_DIR --branch-coverage $LCOV_INFO_FINAL
+lcov $LCOV_RC_BC --no-checksum --capture --directory . --output-file $LCOV_INFO
+lcov $LCOV_RC_BC --no-checksum -a $LCOV_BASE -a $LCOV_INFO --output-file $LCOV_INFO_FINAL
+lcov $LCOV_RC_BC --no-checksum -r $LCOV_INFO /usr/include/\* --output-file $LCOV_INFO_FINAL
+genhtml $GENHTML_USE_BC --output-directory $LCOV_RESULTS_DIR --branch-coverage $LCOV_INFO_FINAL
 
 cd $TOP_DIR
 exit
