@@ -7,8 +7,8 @@ cd ..
 [ -d $LCOV_RESULTS_DIR ] && rm -rf $LCOV_RESULTS_DIR
 [ ! -d $LCOV_RESULTS_DIR ] && mkdir $LCOV_RESULTS_DIR
 
-lcov --rc lcov_branch_coverage=1 --no-checksum --zerocounters --directory .
-lcov --rc lcov_branch_coverage=1 --no-checksum --capture --initial --directory . --output-file $LCOV_BASE
+lcov $LCOV_RC_BC --no-checksum --zerocounters --directory .
+lcov $LCOV_RC_BC --no-checksum --capture --initial --directory . --output-file $LCOV_BASE
 
 cd $TOP_DIR
 exit
