@@ -3,3 +3,12 @@ LCOV_BASE="$TOP_DIR/lcov_coverage.base"
 LCOV_INFO="$TOP_DIR/lcov_coverage.info"
 LCOV_INFO_FINAL="$TOP_DIR/lcov_coverage_final.info"
 LCOV_RESULTS_DIR="$TOP_DIR/lcov-results"
+
+### check to see if lcov offers the --rc option
+LCOV_RC_BC=""
+GENHTML_USE_BC=""
+if `lcov -h | grep -q "\-\-rc"`;
+then
+    LCOV_RC_BC="--rc lcov_branch_coverage=1"
+    GENHTML_USE_BC="--branch-coverage"
+fi
