@@ -2,8 +2,12 @@ fwknop-2.6.6 (02//2015):
     - [server] Bug fix when compiled with --enable-udp-server to not include
       pcap.h, which is likely not installed whenever libpcap is also not
       installed. This bug was reported by Alexander Kozhevnikov.
-    - Set AFL_HARDEN=1 to AFL fuzzing wrapper scripts. This enables simple
-      memory bug detection in AFL at the cost of a small performance hit.
+    - [test suite] Set AFL_HARDEN=1 to AFL fuzzing wrapper scripts. This
+      enables simple memory bug detection in AFL at the cost of a small
+      performance hit.
+    - [test suite] Handle versions of lcov that don't have the --rc argument
+      which is normally used to force the creation branch coverage stats when
+      code coverage reports are created.
 
 fwknop-2.6.5 (12/16/2014):
     - [server] (Grant Pannell) Added a new access.conf variable "DESTINATION"
